--- a/_pgbackup/css/component_1544069395.css
+++ b/_pgbackup/css/component_1544069395.css
@@ -20,7 +20,7 @@ body,
 /* main wrapper */
 .cbp-contentslider {
     width: 100%;
-    height: 70%;
+    height: 95%;
     margin: 1em auto;
     position: relative;
     border: 4px solid #47a3da;
@@ -39,14 +39,13 @@ body,
 .cbp-contentslider > ul li {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 79%;
     left: 0;
     top: 0;
     padding: 1em;
     background: #fff;
 }
 
-/* Whithout JS, we use :target */
 .cbp-contentslider > ul li:target {
     z-index: 100;
 }
@@ -69,19 +68,17 @@ body,
     height: 100%;
     font-weight: 400;
     letter-spacing: 0.1em;
-    overflow: hidden;
-    color: #47a3da;
+    color: #f0c05b;
     background: #fff;
     outline: none;
     text-align: center;
     line-height: 3;
     position: relative;
-    padding-left: 3.125em;
     text-transform: uppercase;
-    border-right: 4px solid #47a3da;
     -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    overflow: hidden;
 }
 
 .cbp-contentslider nav a span {
@@ -93,14 +90,18 @@ body,
     box-shadow: 1px 0 #47a3da; /* fills gap caused by rounding */
 }
 
-.cbp-contentslider nav a:hover {
-    background-color: #47a3da;
-    color: #fff;
+@media (min-width:320px) {
+    .cbp-contentslider nav a:hover {
+        background-color: #47a3da;
+        color: #fff;
+    }
 }
 
 .cbp-contentslider nav a.rc-active {
     background-color: #f7bf44;
     color: #fff;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 /* Iconfont for navigation and headings */
@@ -162,6 +163,8 @@ body,
     letter-spacing: 0.3em;
     padding: 0 0.2em 0 0;
     border-bottom: 4px solid #47a3da;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .cbp-contentslider h3[class^="icon-"]:before,
@@ -184,6 +187,7 @@ body,
     padding: 0 1em;
     overflow-x: hidden;
     overflow-y: auto;
+    height: 642px;
 }
 
 .cbp-contentslider .cbp-content {
@@ -220,7 +224,7 @@ body,
 
 @media screen and (max-width: 67.75em) {
     .cbp-contentslider {
-        font-size: 85%;
+        font-size: 75%;
     }
 
     .cbp-contentslider nav a[class^="icon-"]:before,
@@ -230,11 +234,28 @@ body,
     }
 
     .cbp-contentslider nav a span {
-        display: none;
+        display: cover;
     }
 }
 
 @media screen and (max-width: 43em) {
+    .cbp-contentslider h3 {
+        font-size: 2em;
+    }
+
+    .cbp-contentslider .cbp-content {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        -o-column-count: 2;
+        column-count: 2;
+    }
+
+    .cbp-contentslider li > div {
+        top: 5em;
+    }
+}
+
+@media screen and (max-width: 30em) {
     .cbp-contentslider h3 {
         font-size: 2em;
     }
@@ -251,7 +272,7 @@ body,
     }
 }
 
-@media screen and (max-width: 25em) {
+@media screen and (max-width: 15em) {
     .cbp-contentslider nav a {
         padding: 0;
     }
@@ -263,11 +284,12 @@ body,
 }
 
 .paycheck {
-    width: 935px;
+    height: 100%;
+    width: 100%;
 }
 
 .sssf {
-    width: 98%;
+    width: 200%;
     font-size: 32px;
     margin-bottom: -54px;
     top: 7px;
@@ -277,7 +299,7 @@ body,
 
 input {
     /* width: 262px */
-    height: 28px;
+    height: 37px;
 }
 
 vvv {
@@ -292,4 +314,104 @@ add payment {
     left: -7px;
     right: 8px;
     width: -15px;
+}
+
+personal {
+}
+
+personnal {
+    background-image: url('file:///Users/yuribondarenko/Desktop/icons/personal__630990.png');
+    background-repeat: no-repeat;
+}
+
+.personal {
+    background-image: url('personal__630990.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+header bankin {
+    background-color: #ab3f3f;
+}
+
+ss {
+    background-position: left center;
+    background-size: cover;
+}
+
+.banking {
+    background-image: url('../banking.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: contain;
+}
+
+.bankingheader {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+}
+
+.header1 {
+    background-image: url('personal__630990.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+}
+
+.header3 {
+    background-image: url('../banking.png');
+}
+
+.block3icon {
+    background-image: url('paycheck-549308.png');
+}
+
+.payicon {
+    background-image: url('../paycheck-549308.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.333 {
+}
+
+.333 {
+}
+
+@media (max-width:319px) {
+    .pricemobile {
+        width: 225px;
+    }
+}
+
+@media only screen and (max-width:479px) {
+    .smallmobile {
+    }
+}
+
+@media (max-width:479px) {
+    .smallmobile {
+        width: 294px;
+    }
+}
+
+@media only screen and (max-width:479px) {
+    .smallmobile {
+    }
+
+    .smallmobile {
+        width: 339px;
+        height: 619px;
+    }
+}
+
+undefined: undefined;
+
+@media only screen and (max-width:319px) {
+    .icmob {
+        overflow: hidden;
+        background-position: center center;
+        color: rgba(0, 0, 0, 0);
+    }
 }
