--- a/_pgbackup/css/component_1544073076.css
+++ b/_pgbackup/css/component_1544073076.css
@@ -20,7 +20,7 @@ body,
 /* main wrapper */
 .cbp-contentslider {
     width: 100%;
-    height: 70%;
+    height: 95%;
     margin: 1em auto;
     position: relative;
     border: 4px solid #47a3da;
@@ -46,7 +46,6 @@ body,
     background: #fff;
 }
 
-/* Whithout JS, we use :target */
 .cbp-contentslider > ul li:target {
     z-index: 100;
 }
@@ -69,19 +68,17 @@ body,
     height: 100%;
     font-weight: 400;
     letter-spacing: 0.1em;
-    overflow: hidden;
     color: #f0c05b;
     background: #fff;
     outline: none;
     text-align: center;
     line-height: 3;
     position: relative;
-    padding-left: 3.125em;
     text-transform: uppercase;
-    border-right: 4px solid #47a3da;
     -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    overflow: hidden;
 }
 
 .cbp-contentslider nav a span {
@@ -93,9 +90,11 @@ body,
     box-shadow: 1px 0 #47a3da; /* fills gap caused by rounding */
 }
 
-.cbp-contentslider nav a:hover {
-    background-color: #47a3da;
-    color: #fff;
+@media (min-width:320px) {
+    .cbp-contentslider nav a:hover {
+        background-color: #47a3da;
+        color: #fff;
+    }
 }
 
 .cbp-contentslider nav a.rc-active {
@@ -164,7 +163,6 @@ body,
     letter-spacing: 0.3em;
     padding: 0 0.2em 0 0;
     border-bottom: 4px solid #47a3da;
-    background-image: url('personal__630990.png');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -189,12 +187,10 @@ body,
     padding: 0 1em;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 596px;
+    height: 642px;
 }
 
 .cbp-contentslider .cbp-content {
-    -webkit-column-rule: 1px dashed #47a3da;
-    column-rule: 1px dashed #47a3da;
     -webkit-column-count: 3;
     -moz-column-count: 3;
     -o-column-count: 3;
@@ -226,7 +222,7 @@ body,
 
 @media screen and (max-width: 67.75em) {
     .cbp-contentslider {
-        font-size: 85%;
+        font-size: 75%;
     }
 
     .cbp-contentslider nav a[class^="icon-"]:before,
@@ -236,13 +232,30 @@ body,
     }
 
     .cbp-contentslider nav a span {
-        display: none;
+        display: cover;
     }
 }
 
 @media screen and (max-width: 43em) {
     .cbp-contentslider h3 {
         font-size: 2em;
+    }
+
+    .cbp-contentslider .cbp-content {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        -o-column-count: 2;
+        column-count: 2;
+    }
+
+    .cbp-contentslider li > div {
+        top: 5em;
+    }
+}
+
+@media screen and (max-width: 30em) {
+    .cbp-contentslider h3 {
+        font-size: 29px;
     }
 
     .cbp-contentslider .cbp-content {
@@ -257,7 +270,7 @@ body,
     }
 }
 
-@media screen and (max-width: 25em) {
+@media screen and (max-width: 15em) {
     .cbp-contentslider nav a {
         padding: 0;
     }
@@ -269,21 +282,24 @@ body,
 }
 
 .paycheck {
-    width: 935px;
+    height: 100%;
+    width: 100%;
 }
 
-.sssf {
-    width: 98%;
-    font-size: 32px;
-    margin-bottom: -54px;
-    top: 7px;
-    margin-top: -7px;
-    padding-top: 80px;
+@media (min-width:320px) {
+    .sssf {
+        width: 200%;
+        font-size: 32px;
+        margin-bottom: -54px;
+        top: 7px;
+        margin-top: -7px;
+        padding-top: 80px;
+    }
 }
 
 input {
     /* width: 262px */
-    height: 28px;
+    height: 37px;
 }
 
 vvv {
@@ -309,7 +325,7 @@ personnal {
 }
 
 .personal {
-    background-image: url('file:///Users/yuribondarenko/Desktop/icons/personal__630990.png');
+    background-image: url('personal__630990.png');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -324,8 +340,97 @@ ss {
 }
 
 .banking {
-    background-image: url('file:///Users/yuribondarenko/Desktop/icons/banking.png');
+    background-image: url('../banking.png');
     background-repeat: no-repeat;
     background-position: left center;
     background-size: contain;
+}
+
+.bankingheader {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+}
+
+@media (min-width:320px) {
+    .header1 {
+        background-image: url('personal__630990.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: left center;
+    }
+}
+
+@media (min-width:320px) {
+    .header3 {
+        background-image: url('../banking.png');
+    }
+}
+
+@media (min-width:320px) {
+    .block3icon {
+        background-image: url('paycheck-549308.png');
+    }
+}
+
+.payicon {
+    background-image: url('../paycheck-549308.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.333 {
+}
+
+.333 {
+}
+
+@media (max-width:319px) {
+    .pricemobile {
+        width: 225px;
+    }
+}
+
+@media only screen and (max-width:479px) {
+    .smallmobile {
+    }
+}
+
+@media (max-width:319px) {
+    .smallmobile {
+        width: 229px;
+    }
+}
+
+@media only screen and (min-width:320px) and (max-width:479px) {
+    .smallmobile {
+    }
+}
+
+@media only screen and (min-width:320px) and (max-width:479px) {
+    .smallmobile {
+        width: 339px;
+        height: 493px;
+    }
+}
+
+undefined: undefined;
+
+@media only screen and (max-width:319px) {
+    .icmob {
+        overflow: hidden;
+        background-position: center center;
+        color: rgba(0, 0, 0, 0);
+    }
+}
+
+@media only screen and (max-width:1599px) {
+    .nohead {
+        background-color: #ff0000;
+    }
+}
+
+@media only screen and (max-width:319px) {
+    .icmob {
+    }
 }
