--- a/css/component.css
+++ b/css/component.css
@@ -286,10 +286,9 @@ body,
     width: 100%;
 }
 
-@media (min-width:320px) {
+@media (min-width:480px) {
     .sssf {
         width: 200%;
-        font-size: 32px;
         margin-bottom: -54px;
         top: 7px;
         margin-top: -7px;
@@ -388,6 +387,8 @@ ss {
 @media (max-width:319px) {
     .pricemobile {
         width: 225px;
+        height: 162px;
+        margin-left: -13px;
     }
 }
 
@@ -416,7 +417,7 @@ ss {
 
 undefined: undefined;
 
-@media only screen and (max-width:319px) {
+@media only screen and (max-width:479px) {
     .icmob {
         overflow: hidden;
         background-position: center center;
@@ -427,5 +428,21 @@ undefined: undefined;
 @media only screen and (max-width:1599px) {
     .nohead {
         background-color: #ff0000;
+    }
+}
+
+@media only screen and (min-width:480px) {
+}
+
+@media only screen and (min-width:320px) and (max-width:479px) {
+    .7 {
+    }
+
+    .iphone {
+    }
+
+    .price {
+        width: 277px;
+        margin-left: -11px;
     }
 }
