--- a/css/component.css
+++ b/css/component.css
@@ -90,7 +90,7 @@ body,
     box-shadow: 1px 0 #47a3da; /* fills gap caused by rounding */
 }
 
-@media (min-width:320px) {
+@media (min-width:480px) {
     .cbp-contentslider nav a:hover {
         background-color: #47a3da;
         color: #fff;
@@ -147,7 +147,7 @@ body,
 .cbp-contentslider [class^="icon-"].rc-active:before,
 .cbp-contentslider [class*=" icon-"].rc-active:before,
 .cbp-contentslider nav a:hover:before {
-    color: rgba(255,255,255,0.9);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .cbp-contentslider h3 {
@@ -271,10 +271,9 @@ body,
 }
 
 @media screen and (max-width: 15em) {
-    .cbp-contentslider nav a {
-        padding: 0;
-    }
-
+    /* .cbp-contentslider nav a {
+    padding: 0;
+} */
     .cbp-contentslider h3[class^="icon-"]:before,
     .cbp-contentslider h3[class*=" icon-"]:before {
         display: none;
@@ -415,11 +414,8 @@ ss {
     }
 }
 
-undefined: undefined;
-
 @media only screen and (max-width:479px) {
     .icmob {
-        overflow: hidden;
         background-position: center center;
         color: rgba(0, 0, 0, 0);
     }
@@ -431,16 +427,7 @@ undefined: undefined;
     }
 }
 
-@media only screen and (min-width:480px) {
-}
-
 @media only screen and (min-width:320px) and (max-width:479px) {
-    .7 {
-    }
-
-    .iphone {
-    }
-
     .price {
         width: 277px;
         margin-left: -11px;
